# teda

./: .gitignore  LICENSE  README.md  cmaps.py  console.py  coordinates.py  fitsopen.py  fitsplot.py  fitsplot_fitsfile.py  fitsplotcontrolled.py  fitsplotzoomed.py  fitting.py  fullViewWidget.py  info.py  mainwidget.py  mainwindow.py  painterComponent.py  pyproject.toml  radialprofile.py  radialprofileIRAF.py  requirements.txt  scaleWidget.py  scalesModel.py  scanToolbar.py  setup.py  slider.py  sliderValue.py  teda_fits  teda_fits.py  zoomViewWidget.py
.github/workflows/: build-win.yml  build_executable.yaml
painterShapes/: CircleCenterShape.py  circleShape.py  rectangleMinatureShape.py
teda/: command_line.py  console.py  draggingComponent.py  fitsplot.py  fitsplot_fitsfile.py  fitting.py  fullViewWidget.py  icons.py  painterComponent.py  radialprofileIRAF.py  scaleWidget.py  scalesModel.py  teda_fits.py  version.py  viewer_mainwindow.py  zoomViewWidget.py
teda/models/: coordinates.py  scalesModel.py  shapes_group.py
teda/painterShapes/: CircleCenterShape.py  circleShape.py  rectangleMinatureShape.py
teda/views/: fitsplot.py  fitsplot_fitsfile.py  fitsplotcontrolled.py  fitsplotzoomed.py
teda/widgets/: fileSystemWidget.py  fullViewWidget.py  headerTableWidget.py  info.py  radialprofile.py  radialprofileIRAF.py  regionsWidget.py  scaleWidget.py  scanToolbar.py  slider.py  zoomViewWidget.py
